# actions-example

./: README.md  pyproject.toml
.github/jobs/greeting/: action.yml  get_time.py  greetings.py
.github/jobs/pytest/: README.md  action.yml
.github/workflows/: README.md  reusable_pytest.yml  test_greeting_action.yml  test_pytest_action.yml
src/: example_source.py
tests/: conftest.py  test_example_pytests.py
